Closed
Bug 399262
Opened 17 years ago
Closed 10 years ago
"ASSERTION: NS_BLOCK_HAS_FIRST_LETTER_STYLE state out of sync" with select::first-letter
Categories
(Core :: Layout, defect)
Core
Layout
Tracking
()
RESOLVED
FIXED
mozilla36
People
(Reporter: martijn.martijn, Assigned: MatsPalmgren_bugz)
Details
(Keywords: assertion, testcase)
Attachments
(3 files)
66 bytes,
text/html
|
Details | |
4.47 KB,
patch
|
roc
:
review+
|
Details | Diff | Splinter Review |
4.04 KB,
patch
|
roc
:
review+
|
Details | Diff | Splinter Review |
See testcase, I get this assertion in current debug build with it:
###!!! ASSERTION: NS_BLOCK_HAS_FIRST_LETTER_STYLE state out of sync: 'haveFirstL
etterStyle == ((mState & NS_BLOCK_HAS_FIRST_LETTER_STYLE) != 0)', file c:/mozill
a/mozilla/layout/generic/nsBlockFrame.cpp, line 6282
Updated•17 years ago
|
Summary: ASSERTION: NS_BLOCK_HAS_FIRST_LETTER_STYLE state out of sync with select::first-letter → "ASSERTION: NS_BLOCK_HAS_FIRST_LETTER_STYLE state out of sync" with select::first-letter
Also happens with button::first-letter; layout/reftests/bugs/496032-1 (or reference)
Assignee | ||
Comment 3•10 years ago
|
||
The assertion is a false positive. We need to check for a -moz-button-content
pseudo in the if-statement to avoid it, since buttons are allowed to have
::first-letter.
https://tbpl.mozilla.org/?tree=Try&rev=2b0434b60791
https://tbpl.mozilla.org/?tree=Try&rev=7ee9c4244d03
Assignee: nobody → mats
Attachment #8512693 -
Flags: review?(roc)
Attachment #8512693 -
Flags: review?(roc) → review+
Assignee | ||
Comment 4•10 years ago
|
||
This part is to avoid asserting for <select> which we don't actually
support ::first-letter on.
https://tbpl.mozilla.org/?tree=Try&rev=b257de66ee87
Attachment #8525692 -
Flags: review?(roc)
Assignee | ||
Updated•10 years ago
|
Attachment #8512693 -
Attachment description: fix → part 1
Attachment #8525692 -
Flags: review?(roc) → review+
Assignee | ||
Comment 5•10 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/98b193cac44f
https://hg.mozilla.org/integration/mozilla-inbound/rev/3c1d71ef1284
Flags: in-testsuite+
https://hg.mozilla.org/mozilla-central/rev/98b193cac44f
https://hg.mozilla.org/mozilla-central/rev/3c1d71ef1284
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla36
You need to log in
before you can comment on or make changes to this bug.
Description
•