Bug 399262, part 1 - The -moz-button-content pseudo is also allowed to have a ::first-letter.  r=roc